--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
-  <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <!-- we import arjs version without NFT but with marker + location based support -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
     <body style='margin : 0px; overflow: hidden;'>
         <script>
@@ -34,23 +34,12 @@
       //     });
       </script>
       <a-scene embedded arjs='sourceType:webcam;'>
-        <a-assets>
-          <audio id='dino' src="T_REX.mp3" preload="auto"></audio>
-          <audio id='t_rex' src="Sketch.mp3" preload="auto"></audio>
-        </a-assets>
-         <a-marker id="t-rex" type="barcode" url="qr-code.png">
-             <a-entity gltf-model="url(Models/t_rex/scene.gltf)"  scale="0.01 0.01 0.01" rotation="0 0 0" position="0 0.2 0"
-            animation="property: rotation; to:0 360 0; dur: 9000; loop:true; easing: linear" t_rex>
+         <a-marker id="t-rex" type="barcode" url="qr-code.png" >
+             <a-entity gltf-model="url(Models/arm_anatomy/scene.gltf)"  scale="0.01 0.01 0.01" rotation="0 0 0" position="0 0.2 0">
             </a-entity>
         </a-marker>
-        <a-marker id="sketch" preset="hiro">
-          <a-entity gltf-model="url(Models/sketch_trex/scene.gltf)"  scale="0.2 0.2 0.2" rotation="0 0 0" position="0 0.2 0"
-         animation="property: rotation; to:0 360 0; dur: 9000; loop:true; easing: linear" sketch_trex>
-         </a-entity>
      </a-marker>
-          <a-entity id="audio01" sound="src: #dino" autoplay="false" poolSize=2></a-entity>
          <a-entity camera></a-entity> 
-         <a-entity id="audio02" sound="src: #t_rex" autoplay="false" poolSize=2 ></a-entity>
       </a-scene>
     </body>
 </html>
