--- a/index.html
+++ b/index.html
@@ -1,45 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <!-- we import arjs version without NFT but with marker + location based support -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-</head>
-    <body style='margin : 0px; overflow: hidden;'>
-        <script>
-      //      AFRAME.registerComponent('t_rex', { 
-      //      tick: function () {
-      //             let entity = document.querySelector('#audio01');
-      //           if ( document.querySelector('#t-rex').object3D.visible === true) {
-      //              entity.components.sound.playSound();
-      //          } else {
-      //              entity.components.sound.stopSound();
-      //          }
-      //       }
-      //  });
-
-      //     AFRAME.registerComponent('sketch_trex',{
-      //       tick: function () {
-      //                let audio = document.querySelector('#audio02');
-      //              if ( document.querySelector('#sketch').object3D.visible === true) {
-      //                 audio.components.sound.playSound();
-      //             } else {
-      //                 audio.components.sound.stopSound();
-      //             }
-      //          }
-      //     });
-      </script>
-      <a-scene embedded arjs='sourceType:webcam;'>
-         <a-marker id="t-rex" type="barcode" url="qr-code.png" >
-             <a-entity gltf-model="url(Models/arm_anatomy/scene.gltf)"  scale="0.01 0.01 0.01" rotation="0 0 0" position="0 0.2 0">
-            </a-entity>
-        </a-marker>
-     </a-marker>
-         <a-entity camera></a-entity> 
-      </a-scene>
-    </body>
+<html>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <!-- we import arjs version without NFT but with marker + location based support -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+      <a-marker preset="hiro">
+        <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        ></a-entity>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
