--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <a-entity
-          position="0 0 0"
-          scale="0.05 0.05 0.05"
+          position=".05 0 0"
+          scale="1 1 1"
+          rotation = "0 190 180"
           gltf-model='url(/Models/arm_anatomy/scene.gltf)'
         ></a-entity>
       </a-marker>
