--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <script src=”https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
@@ -11,7 +10,7 @@
           position=".05 0 0"
           scale="1 1 1"
           rotation = "0 190 180"
-          gltf-model='url(/Models/arm_anatomy/scene.gltf)'
+          gltf-model='url(./Models/arm_anatomy/scene.gltf)'
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
