--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-      <a-marker preset="hiro">
+      <a-marker type="pattern" url="/pattern-arm-model">
         <a-entity
           position=".05 0 0"
           scale="1 1 1"
