--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-      <a-marker type='pattern' url='pattern-arm-modelv2.patt'>
+      <a-marker-camera type='pattern' url='./pattern-arm-modelv2.patt'>
         <a-entity
           position=".05 0 0"
           scale="1 1 1"
           rotation = "0 190 180"
           gltf-model='url(./Models/arm_anatomy/scene.gltf)'
         ></a-entity>
-      </a-marker>
+      </a-marker-camera>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
