--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
-      <a-marker-camera type='pattern' url='/pattern-arm_modelv1.patt'>
+    <a-scene embedded arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960;'>
+      <a-marker-camera type='pattern' url='/pattern-muscle.patt'>
         <a-entity
           position=".05 0 0"
           scale="1 1 1"
