--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
   <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960;'>
-      <a-marker-camera type='pattern' url='pattern-muscle.patt'>
+    <a-scene embedded arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960;' gesture-detector id='full-arms'>
+      <a-marker-camera preset='custom' type='pattern' url='pattern-muscle.patt' raycaster="objects: .clickable"
+      emitevents="true"
+      cursor="fuse: false; rayOrigin: mouse;"
+      id="markerA">
         <a-entity
           position=".05 0 0"
           scale="1 1 1"
           rotation = "0 190 180"
           gltf-model='url(./Models/arm_anatomy/scene.gltf)'
+          class="clickable"
+          gesture-handler="minScale: 0.25; maxScale: 10"
         ></a-entity>
       </a-marker-camera>
       <a-entity camera></a-entity>
