--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960;' gesture-detector id='full-arms'>
-      <a-marker-camera preset='custom' type='pattern' url='./Pattern/pattern-volcanov2.patt' raycaster="objects: .clickable"
+      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-volcanov2.patt' raycaster="objects: .clickable"
       emitevents="true"
       cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
@@ -18,7 +18,7 @@
           class="clickable"
           gesture-handler="minScale: 0.25; maxScale: 10"
         ></a-entity>
-      </a-marker-camera>
+      </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
