--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           gesture-handler="minScale: 0.25; maxScale: 10"
         ></a-entity>
       </a-marker>
-      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-muscle.patt' raycaster="objects: .clickable"
+      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-helicopterv3.patt' raycaster="objects: .clickable"
       emitevents="true"
       cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
@@ -27,7 +27,7 @@
           position=".05 0 0"
           scale="1 1 1"
           rotation = "0 190 180"
-          gltf-model='url(./Models/arm_anatomy/scene.gltf)'
+          gltf-model='url(./Models/md_helicopter/scene.gltf)'
           class="clickable"
           gesture-handler="minScale: 0.25; maxScale: 10"
         ></a-entity>
