--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       id="markerA">
         <a-entity
           position=".05 0 0"
-          scale="1 1 1"
+          scale=".1 .1 .1"
           rotation = "0 190 180"
           gltf-model='url(./Models/md_helicopter/scene.gltf)'
           class="clickable"
-          gesture-handler="minScale: 0.25; maxScale: 10"
+          gesture-handler="minScale: 0.1; maxScale: 10"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
