--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           gesture-handler="minScale: 0.1; maxScale: 10"
         ></a-entity>
       </a-marker>
-      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-pan.patt' raycaster="objects: .clickable"
+      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-potato.patt' raycaster="objects: .clickable"
       emitevents="true"
       cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
         <a-entity
           position=".05 0 0"
-          scale=".1 .1 .1"
+          scale=".3 .3 .3"
           rotation = "0 190 180"
           gltf-model='url(./Models/tater_tot/scene.gltf)'
           class="clickable"
