--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           gesture-handler="minScale: 0.1; maxScale: 10"
         ></a-entity>
       </a-marker>
-      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-dino2' raycaster="objects: .clickable"
+      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-dino2.patt' raycaster="objects: .clickable"
       emitevents="true"
       cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
