--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960;' gesture-detector id='full-arms'>
       <a-marker preset='custom' type='pattern' url='./Pattern/pattern-volcanov2.patt' raycaster="objects: .clickable"
@@ -28,6 +29,7 @@
           scale=".1 .1 .1"
           rotation = "0 190 180"
           gltf-model='url(./Models/md_defender/scene.gltf)'
+          animation-mixer=" loop:repeat"
           class="clickable"
           gesture-handler="minScale: 0.1; maxScale: 10"
         ></a-entity>
@@ -45,7 +47,7 @@
           gesture-handler="minScale: 0.1; maxScale: 10"
         ></a-entity>
       </a-marker>
-      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-dino2.patt' raycaster="objects: .clickable"
+      <a-marker preset='custom' type='pattern' url='./Pattern/pattern-dino4.patt' raycaster="objects: .clickable"
       emitevents="true"
       cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
